fix(Tabs): Fix spacing around tab close icon on Linux & Windows

--- a/desktop/src/renderer/components/app-document/app-document-pane/app-document-pane-tab/app-document-pane-tab.css
+++ b/desktop/src/renderer/components/app-document/app-document-pane/app-document-pane-tab/app-document-pane-tab.css
@@ -31,6 +31,8 @@
 
   &.userOS-Linux,
   &.userOS-Windows_NT {
+    @apply pr-1 pl-4;
+
     li {
       @apply flex-row-reverse;
     }
